The amd project update

--- a/site/index.html
+++ b/site/index.html
@@ -54,6 +54,9 @@
 	</h2>
 	
 	<div class="container">
+		21/03/2025 <br>
+        - Finally updated the amd blog! <br><br>
+		
         25/02/2025 <br>
         - Changed the look of the GAMES page <br>
         - Removed Trys from the website <br>
