--- a/site/projects/amd.html
+++ b/site/projects/amd.html
@@ -37,7 +37,22 @@ main {
 
 <main style=" padding: 20px; border-color: red;">
 
-<p>First I started by unboxing the motherboard which is the Gigabyte Aorus B650 Elite AX V2. Then I put in some nice new 8x2 DDR5 ram.</p>
+<img src="../img/project02/01.jpg" loading="lazy" style="width: 30%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project02/02.jpg" loading="lazy" style="width: 15%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project02/03.jpg" loading="lazy" style="width: 20%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+
+<p>First I started by unboxing the motherboard which is the Gigabyte Aorus B650 Elite AX V2. Then I put in some nice new 8x2 DDR5 ram. Fun fact!: I've been drooling over these ram sticks for like a few months now since the rest of my computer took so long to actually ship. So now I can actually for the first time ever put in these "dedicated wam" sticks.</p>
 
 </main>
 
@@ -45,13 +60,43 @@ main {
 
 <main style=" padding: 20px; border-color: red;">
 
-<p>Then I unboxed the cpu which is the AMD Ryzen 7600. This was very scary since I've never handled such a expensive CPU in my whole life. But everything went smoothly. Except for the cpu fan that was actually pretty hard to put until I realised that you needed to tighten the screws in a series and not on individual screw after another. I know that was an awful explaination but I can't really explain it that well over text.</p>
+<img src="../img/project02/05.jpg" loading="lazy" style="width: 30%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project02/06.jpg" loading="lazy" style="width: 27%; 
+			float: right;
+			margin-right: 10px;
+			"/>
+
+<p>Then I unboxed the cpu which is the AMD Ryzen 7600. This was very scary since I've never handled such a expensive CPU ever in my whole life. But everything went smoothly. Except for the cpu fan that was actually pretty hard to put in until I realised that you needed to tighten the screws in a series and not individually. I know that was an awful explaination but I can't really explain it that well over text.</p>
+
+</main>
+
+<br>
+
+<main style=" padding: 20px; border-color: red;">
+
+<img src="../img/project02/08.jpg" loading="lazy" style="width: 25%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project02/07.jpg" loading="lazy" style="width: 25%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+
+<p>For the powersupply, I went with the old but gold CX600M. It might be from 2012 but it's not like it's in charge of something important anyway, like supplying power. It was super easy to install, just had to plug it into the motherboard atx power connector and the cpu power connector. So in short, I just plugged it in. I mean it's not rocket science, lol.</p>
 
 </main>
     
 <br>
 
 <main style=" padding: 20px; border-color: red;">
+
+
 
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
 <img src="../img/under.jpg" loading="lazy" style="border-width: 0px;">
