--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -169,6 +169,20 @@ No other Monster encapsulates this quite as well as Monarch. It's not my favouri
 
 <main style=" padding: 20px; border-color: purple;">
 
+<img src="apple.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: March 24th 2025</h4>
+<h3>Monster Energy Juiced Bad Apple (Review) </h3>
+Over the years I've drank quite the respectable amount of Monster, And if I had bothered to write down statistics. You shouldn't be surprised to see that Bad Apple will probably be among the ones I've bought the most of. It's only been released in my area since last year. Never the less,  it seems this has sort of become a favourite of. mine. If you ask me. The taste is amazing. It's sour in the way that apples you get from random trees in the forest are. It's sweet, which I appreciate. but I'm glad the sourness is the main focus. Coming to think of it, the can says it also has kiwi fruit in it? That may very well be a contributing factor. When holding the can. You'll probably see the not to subtle theme that this monster has. The drink is very clearly encouraging consumers such as myself to commit sin! That's right! Monster energy is trying to turn their fans to satanism and crime! It's important to be mindful of that fact when you're admiring the design that is on the can. As if you're not careful you might get coaxed into doing adultery. or possibly something worse like jaywalking. For me personally, It's too late. I've already committed five bank robberies just today. The flavour is absolutely worth that risk, though. This is a Monster I very much recommend, Monsters are going out faster and faster these days. So grab one before the inevitably stop selling them for good like they did with my sweet sweet Pacific Punch, for shame... Also I have to give it to the design team on this one. I can't take my eyes of the red colour they used. It just looks so good. I don't give points based on design though. So It's staying at a not shabby </p>
+
+<h1>8/10</h1>
+
+</main>
+
+<br>
+
+<main style=" padding: 20px; border-color: purple;">
+
 <img src="kahotic.jpeg" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: March 13th 2025</h4>
