the lewis update

--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -70,6 +70,23 @@ If you're like anything like me, the very first thing you do after buying a new 
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="lewis.avif" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: March 26th 2025</h4>
+<h3>Monster Energy Lewis Hamilton (Review)</h3>
+It's no secret that I really like Monster Energy, and every time I get the chance to buy a new flavour that I haven't tasted yet, I jump on it. Despite this, my encyclopedia of monster tastes is small compared to the actual library of flavours out there. My research is limited by the decisions of local shop owners around my town to feature any given monster flavour.
+Regardless, I am confident that this has to be the first Monster ever created that is based of an actual living person. I'm not sure why Monster had to go and give that title to a racecar driver of all people, But at least the one they picked was in addition to a car racer, a handsome vegan, philanthropist. It's just a shame that unlike the career of Mr. Sir Lewis Hamilton, himself; The flavour of this Monster is very lacking. If I had to compare this flavour to any other Monster I've reviewed so far; It would no doubt have to be Ultra Watermelon. It being sugarless works against it, because the fruit flavour they were going for (That would be Peach and Nectarine, btw) was not enough to save the drink by itself. I've always thought making drinks like this sugarless is just a waste of time, It never tastes as good as it could if they had just used traditional sweeteners. I can see why someone would want a sugar-free drink. But if it's going to taste this boring, like, what's the point, y'know? in most cases Monster manages to pull their flavours into greatness even when they are sugarless. That's a thing I've praised them for in the past. But Lewis Hamilton is a rare instance of failure. If you're a fan of Peach and Nectarine, You might still like this. Taste is obviously subjective.
+Lastly I would like to say something nice about Monster Energy Lewis Hamilton, for once. I enjoy the design on the can. The pattern is obviously inspired by modern sportswear and it's very well executed. the stickers on the left side are great too. That's all I have to say, though. so let's finish of with a score of 
+</p>
+
+<h1>4/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="watermelon.webp" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: March 1st 2025</h4>
