Mango fiesta espanol

--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -104,6 +104,23 @@ but me personally, I'm not going to buy it again.
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="fiesta.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: March 30th 2025</h4>
+<h3>Monster Ultra Fiesta Mango (Review)</h3>
+Clearly, Someone at Monster didn't get the memo that they already had a Mango flavoured drink themed after Mexican festivals. You don't need to even drink it to tell that it's going to be similar to Monster Energy Juiced Mango Loco. And it is. The most noticeable different between the two is that Mango Loco, and other Juiced monsters, As I understand it, are made from real fruits. Where as Ultra is just artificial flavours blended together. This of course gives the Juiced Monsters an extra edge in the race. Although, I reckon they're probably more expensive to produce, too. I wouldn't go so far to say that Mango loco is a loss leader. But with the variety of different fruits they put in that thing, there price tag doesn't look so unreasonable anymore.
+Ultra fiesta on the other hand. It's more like they poured mango perfume into a vat of unflavoured energy drink. It doesn't taste bad. Not by any stretch of the imagination. But if I may be so bold as to compare it to a drink I last had almost a whole month ago. It's generally less rich in flavour. I find that It's hard to come up with a good reason to buy this monster. When Mango Loco is basically the same thing but better. The price is the same. And in my experience. Mango Loco is sold in more stores. So the Million dollar question is; Why does Monster Ultra Fiesta mango even exist? The only reason I can  see for someone buying this, Is if they try to avoid Sugary drinks. Which is a valid excuse. But no other Juiced Monster has their own sugar-free version in Ultra, so why? It's strange. Ultra Fiesta Mango tastes good. But I can't think of a good reason why I would recommend it to someone. I know I sound like a broken record. But it's basically just a worse version of something that already exists. If you want mango, just buy Mango Loco.
+
+</p>
+
+<h1>5/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="rosa.png" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: March 19th 2025</h4>
