--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -121,7 +121,7 @@ Ultra fiesta on the other hand. It's more like they poured mango perfume into a 
 
 <main style="padding: 20px; border-color: purple;">
 
-<img src="rosa.png" style="border-width: 0px; float: right;" width="30%">
+<img src="keen.webp" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: April 1st 2025</h4>
 <h3>Monster Energy Ultra Peachy Keen (Review)</h3>
