--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -123,7 +123,7 @@ The reason I picked this one is because <b>it's</b> the number 1 spot on some re
 
 <img src="rio.webp" style="border-width: 0px; float: right;" width="30%">
 <p>
-<h4 style="color:grey; margin-top: -30px;">Published: April 1st 2025</h4>
+<h4 style="color:grey; margin-top: -30px;">Published: April 1st 2025 (April fools)</h4>
 <h3>Monster Energy Juice Rio Punch (Review)</h3>
 No way, I thought it was gonna be good but this was absolutely amazing.
 It is the best monster i've tasted and not only that it’s easily one of my top 3 drinks of all time. I like exotic drinks like this one but unlike Pipeline punch and Fanta exotic for example, this one is built different. It has the same feeling as the first day of summer vacation, when you know that there is no school for weeks and lots of good memories ahead. The nostalgic feeling of playing lego star wars on the ps2. The feeling of getting hit by a scooter on the shin. Nah maybe not that last one. Honestly there is nothing more to say, go try it yourself.
@@ -131,6 +131,22 @@ It is the best monster i've tasted and not only that it’s easily one of my top
 </p>
 
 <h1>10/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+<img src="rio.webp" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: April 2nd 2025</h4>
+<h3>Monster Energy Juice Rio Punch (Review)</h3>
+If you are confused about this then you clearly didn't check the release date on the last one. Get fooled. The funny thing is that this isn't even close to being a 10/10.
+Rio punch hits you like a punch when you take the first sip. And not even the good type of punch that makes you wake up, get up and get out there. No this punch is the painful type unfortunately. Before we get to the bad stuff I will say that the can design is definitely the best part. It gives a really nice tropical vibe and it's one of the best monster designs i've seen, like for real the person who made it deserves a raise. This drink is a trap to make people hopeful seeing the colorful design tempting you to take a first sip and then mercilessly turning around your experience. Imagine hearing a thousand small voices getting their hopes and dreams crushed. YOU’RE NEXT. You take a sip. At first it feels confusing, not good nor bad, it’s this confusing feeling that makes you curious to keep on going. It feels exotic. No… what is it… Is it candy? But it doesn't feel quite that way either. Chemical? maybe. THEN it’s only a matter of time before you realize that you are crawling right down a rabbit hole and it only keeps on getting worse. The drink is against you. And after a long time it finally stops. Leaving your soulless body behind still wondering. The colorful can, the good reviews, the description that says it does it big and those positive reviews. Liars. That's how my experience was, and I promise you it was 100% as dramatic as I wrote. Yeah, the can even grew out an arm just to punch me and live up to its name. That aside I would describe the taste as a mix between some fruit flavor and that weird energy drink chemical flavor and lastly candy. ya know its in redbull for example.  I really don't like the candy flavor in drinks and it tends to make the drinks mid. On top of that, some candy are worse than others and in the whole candy flavor spectrum I can confidently say it's a bad one. Now if any candy flavor makes the drink mid, what does a bad one at that make it? Worse than most red bull flavors. Anyways, that mystery fruity flavor, I think it's citrus but I'm not shure and there is probably some other exotic fruit mixed in as well. So yeah rio punch is not good, I wouldnt say its terrible but definitely not good.
+</p>
+
+<h1>3/10</h1>
 
 </main>
 
