NITRO AKA BLOXY

--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -104,6 +104,22 @@ but me personally, I'm not going to buy it again.
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="ntro.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: April 4th 2025 (MINECRAFT MOVIE PREMIERE!!)</h4>
+<h3>Monster Energy Nitro Cosmic Peach (Review)</h3>
+Let's get the address the elephant in the room, There is no possible way you could drink this in a public space without having everyone within ear distance thinking you haven't touched grass since middle-school. I can't help but visualise stacks of these piled up on a desk next to a sweaty gamer with cheeto dust all over their keyboard. Fun fact! this is the only monster that has a black lid. That's because this is the first monster made exclusively for the type of person who would die if they looked at a gui that was anything but dark mode. The thing is, this Monster doesn't even taste bad. It's just hard to properly enjoy it. Because to do so, you would have to be on the Overwatch leader-boards.
+All jokes aside, it doesn't taste too bad, It's peach, just with added sourness, citrus, I think. Very chemically. This would unironically be a pretty good choice for drink if you'd like for you monsters to last longer, because I can only drink small sips at a time, again, not because it tastes bad, it's just because it's because of the sourness. It's similar to classic Monster Energy in that way. But if you're just looking for peach flavour, you'd be better of picking Juiced Monarch or Ultra Peachy Keen.
+</p>
+
+<h1>5/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="fiesta.png" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: March 30th 2025</h4>
