--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -297,6 +297,21 @@ Yet another absolute W from Juiced Monster Energy. It's an amazing drink made fr
 
 </main>
 
+<br>
+
+<main style=" padding: 20px; border-color: purple;">
+
+<img src="rio.webp" style="border-width: 0px; float: right;" width="27%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: April 6th 2025</h4>
+<h3>Monster Energy Juiced Rio Punch (Review)</h3>
+This is one Monster I was very excited to get my hands on. And the place where I did, was at a train station shop, which of course meant it cost a fortune. Not really, it was 25kr, which isn't cheap. But well worth it for a drink like this, In my opinion. It very sugary. Which is a common theme with tropical juiced monsters, I've noticed. It may be just that I was in a hurry, but I drank it up unexpectedly quickly. In case you're curious, It's made of Apple, white grape, papaya and mango. I'm not nearly familiar enough with the flavours of white grape or papaya to know if that's what it tastes like. What I can tell you is that this tastes absolutely delicious. If you're a fan of monster, and especially if you like the Juiced ones; You got to get yourself a Rio Punch of your own. 
+</p>
+
+<h1>9/10</h1>
+
+</main>
+
 <footer style="background-color: black;">
 		<br><br>
 		<div class="copyright" style="background-color: purple;">
