--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -34,7 +34,7 @@ main {
     
 <main style="border-color: purple; padding: 20px;">
 <h2 align="center">Espster reviews (<a class="purple" href="https://www.youtube.com/channel/UCyY-HgPNSKS6dYFL18zAd9A">EsperBlox's</a> monster energy drink reviews)</h1>
-<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: March. 9th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
+<p align="center"><a href="../index.html" style="padding: 0px;">[Take a look into MansyS belongings]</a> Updated: April 6th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 
 <div style="float: right;">
 <img src="esper.png" style="float: right; border-width: 0px;">
